# dAstIll

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONFIGURATION_FIX_SUMMARY.md  Dockerfile  README.md  README_DEPLOY.md  ai-workflow  design.md  docker-compose.yml  end_app.sh  main.py  migrate_files.py  migrate_tina_files.py  package-lock.json  pyproject.toml  start_app.sh  test_transcript_for_ollama.md  todo.md
.agent/commands/: deploy.md  start.md
.agent/workflows/: commit-conventions.md.template  graphite-usage.md  graphite-usage.md.template  parallel-development.md.template  tdd-workflow.md.template  testing-best-practices.md.template
.artifacts/chat-capability-highlights/: failures-by-class.json  results.json  results.md
.artifacts/chat-capability-q002/: results.json  results.md
.artifacts/chat-capability-smoke/: results.json  results.md
.factory/: init.sh  services.yaml
.github/workflows/: checks.yml  claude-code-review.yml  deploy.yml  security.yml
.specs/: 2026-03-21-fix-transcript-generation-failures.md  app-dark-mode.md  app-dark-mode.tasks.md  async-add-source-feedback.md  async-add-source-feedback.tasks.md  channel-gap-reconciliation.md  channel-gap-reconciliation.tasks.md  channel-navigation-audio-resilience.md  channel-navigation-audio-resilience.tasks.md  channel-order-customization.md  channel-order-customization.tasks.md  channel-reorder-last-position.md  channel-reorder-last-position.tasks.md  channel-video-list-performance.md  channel-video-list-performance.tasks.md  channels-refresh-stuck.md  channels-refresh-stuck.tasks.md  chat-capability-sweep.md  chat-capability-sweep.tasks.md  chat-db-stats-tool.md  chat-db-stats-tool.tasks.md  chat-delete-all.md  chat-delete-all.tasks.md  chat-mention-tags.md  chat-mention-tags.tasks.md  chat-rag-ui-upgrade.md  chat-rag-ui-upgrade.tasks.md  chat-recent-activity.md  chat-recent-activity.tasks.md  chat-response-cancellation.md  chat-response-cancellation.tasks.md  chat-typeahead-suggestions.md  chat-typeahead-suggestions.tasks.md  compile-warnings-cleanup.md  compile-warnings-cleanup.tasks.md  databricks-analytics-showcase.md  databricks-analytics-showcase.tasks.md  db-access-concurrency.md  db-access-concurrency.tasks.md  dev-launcher.md  (+105 more)
backend/: .env.example  Cargo.toml  Dockerfile  backend-wif-token.jwt  openapi.postman.yaml  test_db.rs
backend/.cargo/: audit.toml
backend/scripts/: fake_summarize.sh
backend/src/: audit.rs  aws_auth.rs  cache_headers.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  read_cache.rs  search_progress.rs  search_query.rs  security.rs  state.rs  workers.rs
backend/src/db/: channels.rs  chat.rs  content.rs  firestore_videos.rs  helpers.rs  highlights.rs  mod.rs  preferences.rs  search.rs  stats.rs  tts_stats.rs  user_scope.rs  video_info.rs  videos.rs
backend/src/db/videos/: frag_02.rs  mod.rs
backend/src/handlers/: analytics.rs  channels.rs  chat.rs  content.rs  highlights.rs  mod.rs  preferences.rs  query.rs  search.rs  videos.rs
backend/src/handlers/content/: frag_02.rs  mod.rs
backend/src/handlers/search/: frag_02.rs  mod.rs
backend/src/services/: chat.rs  chat_heuristics.rs  chat_prompt.rs  chat_ranking.rs  databricks.rs  fts.rs  fusion.rs  http.rs  mod.rs  ollama.rs  search.rs  summarizer.rs  summary_evaluator.rs  text.rs  transcript.rs  tts.rs  youtube.rs
backend/src/services/chat/: cloud_models.rs  constants.rs  frag_impl.rs  frag_post_a.rs  frag_post_b.rs  frag_types_a.rs  frag_types_b.rs  intent.rs  mod.rs  recent.rs  tools.rs
backend/src/services/chat/tools/: frag_01.rs  frag_02.rs  frag_03.rs  mod.rs
backend/src/services/search/: frag_02.rs  mod.rs
backend/src/services/summarizer/: mod.rs  prompts.rs  transcript_compare.rs
backend/src/services/youtube/: atom.rs  data_api.rs  innertube.rs  mod.rs  placeholder.rs  resolve.rs  rss.rs  video_builder.rs
backend/src/workers/: gap_scan.rs  mod.rs  queue.rs  refresh.rs  search_index.rs  summary_evaluation.rs
backend/tests/data/: chat_capability_prompts.json
config/: channel_config.py  channels.json  config.py
data/config/: channels.json  config.json
data/downloaded/: 3foYyPDp0Ho_3Blue1Brown.md  3xo1nQGqmYI_Tina Huang.md  6dTyOl1fmDo_3Blue1Brown.md  C8baNzpnZ7o_3Blue1Brown.md  Dlsa9EBKDGI_3Blue1Brown.md  M6LUPYsjods_3Blue1Brown.md  PL5QnLrOjqk_Tina Huang.md  RQWpF2Gb-gU_3Blue1Brown.md  TGRHzke8MuI_Tina Huang.md  (+11 more)
databricks/: AGENTS.md  databricks.yml
docs/: Dockerfile  ai-models.md  channel-commands-evaluation.md  index.md  local-development.md  nginx.conf  package.json  search-indexing.md  ui-tour.md
frontend/: .env.example  .prettierrc  Dockerfile  README.md  eslint.config.js  package.json  playwright.config.ts  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: ai-workflow.sh  docker-wrapper.sh  install_dev_launcher.sh  validate-docker-config.sh
specs/: ux-audit.md  ux-visual-audit.md
src/: browser_transcript_extractor.py  claude_integration.py  file_manager.py  monitoring_service.py  ollama_processor.py  rss_monitor.py  transcript_formatter.py  transcript_loader.py
terraform/: .terraform.lock.hcl  artifact_registry.tf  aws_dev_user.tf  aws_wif.tf  backend.env  cloud_run.tf  firestore.tf  iam.tf  main.tf  s3.tf  secret_iam_wait.tf  secrets.tf  services.tf  terraform.tfvars  terraform.tfvars.example  tfplan  tfplan-index-fix  variables.tf
tests/: __init__.py  test_channel_config.py  test_channel_id_resolution.py  test_claude_integration.py  test_config.py  test_file_manager.py  test_integration.py  test_markdown_storage.py  test_monitoring_service.py  test_ollama_processor.py  test_rss_monitor.py  test_stateless_loader.py  test_stateless_manager.py  test_subscription.py  test_transcript_formatter.py  test_transcript_loader.py  test_validation.py  test_video_tracker.py  test_youtube_loader.py
(+374 files in other folders)
