[package]
name = "dastill"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
logfire = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for YouTube/Ollama
reqwest = { version = "0.12", features = ["json"] }

# RSS parsing
rss = "2"
roxmltree = "0.20"

# HTML parsing for channel resolution
scraper = "0.26.0"

# Async utilities
thiserror = "2"
anyhow = "1"

# In-memory BM25 full-text search
tantivy = { git = "https://github.com/quickwit-oss/tantivy", branch = "main" }
rig-core = "0.28.0"
sha2 = "0.10"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Types generation
ts-rs = { version = "10.0", features = ["chrono-impl"] }

# AWS S3 + S3 Vectors
aws-config = { version = "1", features = ["behavior-version-latest", "credentials-login", "rustls"] }
aws-sdk-s3 = { version = "1", features = ["rustls"] }
aws-sdk-s3vectors = { version = "1", features = ["rustls"] }
aws-sdk-sts = { version = "1", features = ["rustls"] }
aws-smithy-types = "1"
aws-credential-types = "1.2.11"

# Google Cloud Firestore
firestore = "0.48"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
aws-sdk-polly = "1.98.0"
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
http-body-util = "0.1"
